--- a/css/index.css
+++ b/css/index.css
@@ -165,7 +165,7 @@ a span.cart{
 
   .badge{
     font-size: small;
-    background-color: burlywood;
+    background-color: rgb(216, 216, 8);
     color: rgb(41, 10, 10);
     float: right;
     border-radius: 50%;
