--- a/css/index.css
+++ b/css/index.css
@@ -165,7 +165,7 @@ a span.cart{
 
   .badge{
     font-size: small;
-    background-color: maroon;
+    background-color: red;
     color: wheat;
     float: right;
     border-radius: 50%;
